# WordHub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  json_to_csv_excel.py  play_install_demo.html  prospectus.md  test.py  word_learning.md  提交规范与代码注释规范.md  词库导入样例.txt
GUI/: readme.md
WordHub/: WordHub.pro  main.cpp  wordle_base.txt  打包.iss
WordHub/API/: dictionaryapi.cpp  readme.md
WordHub/UI/: achievementtoast.h  achievementwidget.cpp  achievementwidget.h  achievementwidget.ui  darktheme_win.cpp  darktheme_win.h  gamewidget.cpp  gamewidget.h  gamewidget.ui  guess_word_widget.h  guess_word_widget.ui  learnwidget.cpp  learnwidget.h  learnwidget.ui  loginwidget.cpp  loginwidget.ui  logos.qrc  (+14 more)
WordLite/: AMOLED.qss  Resource.qrc  WordLite.pro  WordLite.pro.user.1a1b0d7  achievementtoast.cpp  achievementwidget.cpp  achievementwidget.h  achievementwidget.ui  gamewidget.cpp  gamewidget.h  gamewidget.ui  guess_word_widget.cpp  guess_word_widget.h  guess_word_widget.ui  learnwidget.cpp  learnwidget.h  learnwidget.ui  learnwidget.ui.autosave  loginwidget.cpp  loginwidget.h  loginwidget.ui  logos.qrc  macOS.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  querywidget.cpp  querywidget.h  querywidget.ui  registerwidget.cpp  registerwidget.h  registerwidget.ui  reviewwidget.cpp  reviewwidget.h  reviewwidget.ui  userwidget.cpp  userwidget.h  userwidget.ui  wordle.cpp  (+5 more)
head/: readme.md
python/: readme.md  vocabulary_learning.pyd
src/: example.cpp
杂项/: json_to_csv_excel.py  mdx_to_json.py
词典/: GRE_abridged.db  test.db  中考英语词汇表.db  小学英语大纲词汇.db
(+72 files in other folders)
